# OpenROAD

./: .gitmodules  BUILD.bazel  mockturtle.patch
etc/: DependencyInstaller.sh
src/: CMakeLists.txt  OpenRoad.cc  OpenRoad.i
src/cgt/: BUILD  README.md
src/cgt/src/: ClockGating.cpp  cgt.tcl
src/cgt/test/: ibex_sky130hd.ok
src/cts/src/: SinkClustering.cpp
src/cut/src/: CMakeLists.txt  logic_cut.cpp  logic_extractor.cpp
src/dbSta/src/: dbNetwork.cc  dbSdcNetwork.cc
src/dpo/src/: architecture.cxx  architecture.h  detailed_displacement.cxx  detailed_manager.cxx  detailed_mis.cxx
src/drt/src/: TritonRoute.cpp  frDesign.h  frRegionQuery.cpp  frRegionQuery.h  serialization.h
src/gpl/src/: initialPlace.cpp  timingBase.cpp
src/gpl2/: CMakeLists.txt
src/gpl2/src/: MakeDgReplace.cpp  cudaUtil.h  dct.cpp  densityOp.cpp  densityOp.h  dg_replace.cpp  initialPlace.cpp  initialPlace.h  nesterovPlace.cpp  nesterovPlace.h  placerBase.cpp  placerBase.h  placerObjects.cpp  placerObjects.h  poissonSolver.cpp  poissonSolver.h  routeBase.cpp  routeBase.h  timingBase.cpp  timingBase.h  util.cpp  util.h  wirelengthOp.cpp  wirelengthOp.h
src/grt/src/: GlobalRouter.cpp  MakeWireParasitics.cpp
src/mpl/src/: hier_rtlmp.cpp
src/mpl2/: CMakeLists.txt
src/mpl2/src/: SACoreSoftMacro.cpp  SimulatedAnnealingCore.cpp  object.h
src/rmp/: .gitignore  BUILD
src/rmp/src/: CMakeLists.txt  Restructure.cpp  annealing_strategy.cpp  annealing_strategy.h  emap_strategy.cpp  extended_technology_mapping.cpp  extended_technology_mapping.h  genetic_algorithm.cpp  (+13 more)
test/: helpers.tcl
(+113 files in other folders)
